tests/baselines/reference/parserBlockStatement1.d.errors.txt
==== tests/cases/compiler/parserBlockStatement1.d.ts (1 errors) ====
    {}
    ~
!!! parserBlockStatement1.d.ts(1,1): error TS1037: A function implementation cannot be declared in an ambient context.